fix: align content on the landing page

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -1306,7 +1306,7 @@ header {
     height: 56px;
   }
   .slider__items { 
-    width: 45.4vw;
+    width: 546px;
     height: 546px;
     flex-direction: column;
     align-content: flex-start;
@@ -1389,7 +1389,7 @@ header {
     margin-bottom: 61px;
   }
   .testimonials-slider {
-    width: calc( 100% - 500px );
+    width: 454px;
     height: 365px;
   }
   .testimonials-slider__items {
@@ -1837,13 +1837,12 @@ header {
     width: 84%;
   }
   .testimonials-slider {
-    width: 100%;
+    width: 454px;
     height: 370px;
     align-items: center;
   }
   .testimonials-slider__items {
     box-sizing: border-box;
-    padding-left: 9px;
   }
   .pay-and-feed__h2_disabled {
     align-self: center;
@@ -2079,6 +2078,7 @@ header {
     width: calc(  100% - 20px );
     margin: 0;
     padding: 70px 0 56px;
+    justify-content: center;
   }
   .watch-online-wrapper-content {
     width: 300px;
@@ -2252,6 +2252,7 @@ header {
   }
   .testimonials-slider {
     height: 425px;
+    width: 300px;
   }
   .testimonials-slider__link {
     font-size: 14px;
